--- a/package.json
+++ b/package.json
@@ -1,35 +1,39 @@
 {
-  "name": "clementines-dashboard",
-  "version": "0.0.1",
+  "name": "hashlips_nft_minting_dapp",
+  "version": "1.0.0",
+  "description": "HashLips minting dapp is a quick and easy way to connect your smart contract and start minting NFTs.",
   "private": true,
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "serve": "vite preview"
-  },
   "dependencies": {
-    "bignumber.js": "^9.0.1",
-    "bn.js": "^5.2.0",
-    "buffer": "^6.0.3",
-    "decimal.js": "^10.3.1",
-    "lodash": "^4.17.21",
-    "qrcode.vue": "^3.3.2",
-    "set-interval-async": "^2.0.3",
-    "vue": "^3.2.6",
-    "vue-router": "^4.0.11",
-    "web3": "^1.5.2"
+    "@openzeppelin/contracts": "^4.5.0",
+    "@walletconnect/web3-provider": "^1.7.5",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-redux": "^7.2.4",
+    "react-scripts": "4.0.3",
+    "redux": "^4.1.1",
+    "redux-thunk": "^2.3.0",
+    "styled-components": "^5.3.0",
+    "web-vitals": "^1.0.1",
+    "web3": "^1.5.1",
+    "web3-eth-contract": "^1.5.2",
+    "web3modal": "^1.9.5"
   },
-  "devDependencies": {
-    "@types/web3": "^1.2.2",
-    "@vitejs/plugin-vue": "^1.6.1",
-    "@vue/compiler-sfc": "^3.2.6",
-    "autoprefixer": "^10.3.4",
-    "postcss": "^8.3.6",
-    "tailwindcss": "^2.2.15",
-    "vite": "^2.5.4"
+  "author": "Daniel Eugene Botha (HashLips)",
+  "license": "MIT",
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build"
   },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/clementinesnightmare/clementines-dashboard"
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
