--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
   "dependencies": {
     "@openzeppelin/contracts": "^4.5.0",
     "@walletconnect/web3-provider": "^1.7.5",
+    "moralis": "^1.5.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-moralis": "^1.3.4",
     "react-redux": "^7.2.4",
     "react-scripts": "4.0.3",
     "redux": "^4.1.1",
