--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "HashLips minting dapp is a quick and easy way to connect your smart contract and start minting NFTs.",
   "private": true,
   "dependencies": {
+    "@ensdomains/eth-ens-namehash": "^2.0.15",
     "@openzeppelin/contracts": "^4.5.0",
     "@walletconnect/web3-provider": "^1.7.5",
     "moralis": "^1.5.5",
